# folderdrop

./: .gitignore  CMakeLists.txt  README.md  config.bs  config.bs.example  example.env
include/: app.h  fele_error.h  mounts.h  raindrop.h  raindrop_cache.h  raindrop_queue.h  string_utils.h
src/: app.cpp  main.cpp  mounts.cpp  raindrop.cpp  raindrop_cache.cpp  raindrop_queue.cpp
